Actions
Bug #9271
closeduts/i86pc: this statement may fall through
Start date:
2018-03-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issues found by gcc 7 build:
../../i86pc/os/trap.c:610:4: error: this statement may fall through [-Werror=implicit-fallthrough=] (void) die(type, rp, addr, cpuid); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../i86pc/os/trap.c:614:2: note: here case T_PGFLT: /* system page fault */ ^~~~ ../../i86pc/os/trap.c: In function 'dump_ttrace': ../../i86pc/os/trap.c:2161:10: error: this statement may fall through [-Werror=implicit-fallthrough=] sys = &sysent[rec->ttr_sysnum]; ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~ ../../i86pc/os/trap.c:2168:5: note: here case TT_SYSC: ^~~~ ../../i86pc/boot/boot_console.c:507:3: error: this statement may fall through [-Werror=implicit-fallthrough=] ++p; ^~~ ../../i86pc/boot/boot_console.c:508:2: note: here default: ^~~~~~~ ../../i86pc/boot/boot_console.c:525:3: error: this statement may fall through [-Werror=implicit-fallthrough=] ++p; ^~~ ../../i86pc/boot/boot_console.c:526:2: note: here default: ^~~~~~~ ../../common/disp/cmt.c: In function 'pg_cmt_lineage_validate': ../../common/disp/cmt.c:1887:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (((pghw_t *)pg)->pghw_hw == PGHW_CHIP) { ^ ../../common/disp/cmt.c:1894:2: note: here case CMT_LINEAGE_NON_PROMOTABLE: ^~~~ ../../common/os/lgrp.c:3726:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (lgrp != lgrp_root) { ^ ../../common/os/lgrp.c:3735:2: note: here case LGRP_MEM_POLICY_RANDOM: ^~~~ ../../common/os/lgrp.c:3785:8: error: this statement may fall through [-Werror=implicit-fallthrough=] stat = LGRP_NUM_RANDOM_PROC; ~~~~~^~~~~~~~~~~~~~~~~~~~~~ ../../common/os/lgrp.c:3788:2: note: here case LGRP_MEM_POLICY_RANDOM_PSET: ^~~~ ../../common/os/lgrp.c:3726:6: error: this statement may fall through [-Werr or=implicit-fallthrough=] if (lgrp != lgrp_root) { ^~~~ ../../common/os/lgrp.c:3726:6: error: this statement may fall through [-Werr or=implicit-fallthrough=] if (lgrp != lgrp_root) { ^ ../../common/os/lgrp.c:3735:2: note: here case LGRP_MEM_POLICY_RANDOM: ^~~~ ../../common/os/lgrp.c:3785:8: error: this statement may fall through [-Werr or=implicit-fallthrough=] stat = LGRP_NUM_RANDOM_PROC; ~~~~~^~~~~~~~~~~~~~~~~~~~~~ ../../common/os/lgrp.c:3788:2: note: here case LGRP_MEM_POLICY_RANDOM_PSET: ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit df23f1c1c0a6fa2a4bddd7a14cfc75933bbd5917
commit df23f1c1c0a6fa2a4bddd7a14cfc75933bbd5917 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:40.000Z 9271 uts/i86pc: this statement may fall through Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions