9271 uts/i86pc: this statement may fall through Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>