usr/src/uts/common/disp/cmt.c
@@ -1890,7 +1890,7 @@ handle_error:
 				goto revalidate;
 			}
 		}
-		/*LINTED*/
+		/* FALLTHROUGH */
 	case CMT_LINEAGE_NON_PROMOTABLE:
 		/*
 		 * We've detected a PG that already exists in another CPU's
