usr/src/uts/common/os/lgrp.c
@@ -3731,7 +3731,7 @@ lgrp_mem_choose(struct seg *seg, caddr_t vaddr, size_t pgsz)
 				    LGRP_NUM_DEFAULT, 1);
 			break;
 		}
-		/* LINTED fallthrough on case statement */
+		/* FALLTHROUGH */
 	case LGRP_MEM_POLICY_RANDOM:
 
 		/*
@@ -3784,7 +3784,7 @@ lgrp_mem_choose(struct seg *seg, caddr_t vaddr, size_t pgsz)
 		klgrpset_copy(lgrpset, curproc->p_lgrpset);
 		stat = LGRP_NUM_RANDOM_PROC;
 
-		/* LINTED fallthrough on case statement */
+		/* FALLTHROUGH */
 	case LGRP_MEM_POLICY_RANDOM_PSET:
 
 		if (!stat)
