usr/src/uts/i86pc/boot/boot_console.c
@@ -505,6 +505,7 @@ serial_adjust_prop(void)
 		break;
 	case '8':
 		++p;
+		/* FALLTHROUGH */
 	default:
 		lcr |= BITS8;
 		break;
@@ -523,6 +524,7 @@ serial_adjust_prop(void)
 		break;
 	case 'e':
 		++p;
+		/* FALLTHROUGH */
 	default:
 		lcr |= PARITY_EVEN;
 		break;
